k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
  - port: 8080
