k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  namespace: example-app
spec:
  ingressClassName: traefik
  rules:
  - host: example-app.rd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-app
            port:
              number: 8080
  # use tls with default traefik cert
  tls:
  - hosts:
      - example-app.rd.localhost
